git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "9e567b0"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "9e567b0"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/perl6/doc/doc/Language/classtut.pod
+++ b/perl6/doc/doc/Language/classtut.pod
@@ -17,6 +17,8 @@ is interesting and, at times, useful.
         has Task @!dependencies;
         has Bool $.done;
 
+        # Normally doesn't need to be written
+        # BUILD is the equivalent of a constructor in other languages
         method new(&callback, *@dependencies) {
             return self.bless(:&callback, :@dependencies);
         }
@@ -91,7 +93,7 @@ a given object is a type object or not:
         say "Type object";
     }
 
-=head1 I can haz state?
+=head1 State
 
 X<|attributes>
 X<|classes, attributes>
@@ -310,9 +312,9 @@ new object by C<bless>:
 
 Since C<BUILD> runs in the context of the newly created C<Task> object, it
 is allowed to manipulate those private attributes. The trick here is that
-the private attributes (C<&!callback> and C<&!dependencies>) are being used
+the private attributes (C<&!callback> and C<@!dependencies>) are being used
 as the bind targets for C<BUILD>'s parameters. Zero-boilerplate
-initialization! See L<objects|/language/objects#Object Construction> for
+initialization! See L<objects|/language/objects#Object_Construction> for
 more information.
 
 The C<BUILD> method is responsible for initializing all attributes, it must
@@ -328,7 +330,7 @@ handle default values too:
             :$!ready = not @!dependencies
         ) { }
 
-See L<Object Construction|/language/objects#Object Construction> for more
+See L<Object Construction|/language/objects#Object_Construction> for more
 options to influence object construction and attribute initialization.
 
 =head1 Consuming our class
