--- a/perl6/doc/doc/Language/5to6-nutshell.pod
+++ b/perl6/doc/doc/Language/5to6-nutshell.pod
@@ -1,8 +1,8 @@
 =begin pod
 
-=TITLE Perl 5 to Perl 6, in a nutshell
+=TITLE 5to6-nutshell
 
-=SUBTITLE How do I do what I used to do?
+=SUBTITLE Perl 5 to Perl 6, in a nutshell: How do I do what I used to do?
 
 This page attempts to index the changes in syntax and semantics from
 Perl 5 to Perl 6. Whatever worked in Perl 5 and must be written differently
@@ -181,10 +181,11 @@ name.
 
 =head4 C<$> Scalar
 
-The C<$> sigil is now always used with "item" variables (e.g. C<$name>),
+The C<$> sigil is now always used with "scalar" variables (e.g. C<$name>),
 and no longer for L<array indexing|#[]_Array_indexing/slicing> and L<Hash
-indexing|#{}_Hash_indexing/slicing>.  That is, you will still use C<$x[1]>
-and C<$x{"foo"}>, but you use them on C<$x>, not C<@x> or C<%x>.
+indexing|#{}_Hash_indexing/slicing>.  That is, you can still use C<$x[1]>
+and C<$x{"foo"}>, but it will act on $x, with no effect on a similarly
+named @x or %x. Those would now be accessed with @x[1] and %x{"foo"}.
 
 =head4 C<@> Array
 
@@ -359,7 +360,7 @@ I<Key/value-slicing>
     say join ',', %calories<pear plum>:kv;      # Perl 6 (prettier version)
 =end item
 
-Also note that the subscripting braces are now a normal postcircumfix
+Also note that the subscripting curly braces are now a normal postcircumfix
 operator rather than a special syntactic form, and thus L<checking for
 existence of keys|#exists> and L<removing keys|#delete> is done with
 adverbs.
@@ -411,7 +412,7 @@ In Perl 6, the curly braces are changed to parentheses.
         say keys %($hashref   );
         say      &($subref    );
 
-Note that in both Perl 5 and Perl 6, the surrounding braces or parens can
+Note that in both Perl 5 and Perl 6, the surrounding curly braces or parens can
 often be omitted, though the omission can reduce readability.
 
 In Perl 5, the arrow operator, C«->» , is used for single access to a
@@ -587,10 +588,10 @@ Mnemonic: think of "stitching" together the two strings with needle and thread.
 
 In Perl 5, C<x> was the Repetition operator.
 
-In scalar content, C<x> would repeat a string. In Perl 6, C<x> repeats
+In scalar context, C<x> would repeat a string. In Perl 6, C<x> repeats
 strings in any context.
 
-In list content, C<x> would repeat a list—but only if the left argument
+In list context, C<x> would repeat a list—but only if the left argument
 is parenthesized! In Perl 6, the new C<xx> op repeats lists in any context.
 
 Mnemonic: x is short and xx is long, so xx is the one used for lists.
