--- a/perl6/doc/doc/Language/5to6-perlop.pod
+++ b/perl6/doc/doc/Language/5to6-perlop.pod
@@ -168,10 +168,10 @@ In list context, C<..> operates as the range operator and should not
 need to be changed. That said, there are exclusionary range operators
 that may be useful. These are:
 
-infix  ..^  Excludes endpoint. C<1..^5; # 1 2 3 4 >
-infix  ^..  Excludes startpoint. C<1^..5; # 2 3 4 5>
-infix  ^..^ Excludes both start- and endpoint. C<1^..^5; # 2 3 4>
-prefix ^    From 0, excludes endpoint. C<^5; # 0 1 2 3 4>
+    infix  ..^  Excludes endpoint. C<1..^5; # 1 2 3 4 >
+    infix  ^..  Excludes startpoint. C<1^..5; # 2 3 4 5>
+    infix  ^..^ Excludes both start- and endpoint. C<1^..^5; # 2 3 4>
+    prefix ^    From 0, excludes endpoint. C<^5; # 0 1 2 3 4>
 
 In scalar context, C<..> and C<...> work as flip-flop operators in Perl
 5, but are little-known, and probably even less used. Those operations
@@ -240,12 +240,12 @@ L<http://doc.perl6.org/language/quoting>.
 There is a quoting operator that allows absolute literal strings: C<Q> or
 C<｢…｣>, although the latter might be difficult to find on your keyboard,
 depending on your keyboard... Backslash escapes do I<not> apply in C<Q> quoted
-strings. E. g. C<Q{This is still a closing brace → \}> renders "This is still a
-closing brace → \".
+strings. E. g. C<Q{This is still a closing curly brace → \}> renders "This is still a
+closing curly brace → \".
 
 C<q> does what you expect, allowing backslash escapes. E. g. C<q{This is
-not a closing brace → \}, but this is → }> returning "This is
-not a closing brace → }, but this is →". As in Perl 5, you can
+not a closing curly brace → \}, but this is → }> returning "This is
+not a closing curly brace → }, but this is →". As in Perl 5, you can
 get this behavior with single quotes.
 
 C<qq> allows interpolation of variables. However, by default, only
