--- a/perl6/doc/doc/Language/functions.pod
+++ b/perl6/doc/doc/Language/functions.pod
@@ -128,11 +128,12 @@ one to skip commas between named arguments.
     f :32x :50y :110z   # This flavor of "adverb" works, too
     f :a:b:c            # The spaces are also optional.
 
-=head2 Multi-dispatch
+=head2 X<Multi-dispatch|declarator,multi>
 
 Perl 6 allows you to write several routines with the same name, but different
 signatures. When the routine is called by name, the runtime environment
-decides which is the best match, and calls that I<candidate>.
+decides which is the best match, and calls that I<candidate>. You declare
+each candidate with the C<multi> declarator.
 
     multi congratulate($name) {
         say "Happy birthday, $name";
@@ -153,7 +154,34 @@ type:
 
     say as-json([True, 42]);    # [true, 42]
 
-=comment multi, proto, {*}, only
+C<multi> without any specific routine type always defaults to a C<sub>, but you
+can use it on methods as well. The candidates are all the mutli methods of the
+object:
+
+    class Congrats {
+
+        multi method congratulate($reason,$name) {
+            say "Hooray for your $reason, $name";
+        }
+
+    }
+
+    role BirthdayCongrats {
+
+        multi method congratulate('birthday',$name) {
+            say "Happy birthday, $name";
+        }
+        multi method congratulate('birthday',$name,$age) {
+            say "Happy {$age}th birthday, $name";
+        }
+    }
+
+    my $congrats = Congrats.new does BirthdayCongrats;
+
+    $congrats.congratulate('promotion','Cindy'); #-> Hooray for your promotion, Cindy
+    $congrats.congratulate('birthday','Bob');    #-> Happy birthday, Bob
+
+=comment proto, {*}, only
 
 =head1 Conventions and Idioms
 
