--- a/perl6/doc/doc/Language/grammars.pod
+++ b/perl6/doc/doc/Language/grammars.pod
@@ -86,7 +86,7 @@ information you are actually interested in.
 To avoid the need for diving deep into a match tree, you can supply an
 I<actions> object. After each successful parse of a named rule in your
 grammar, it tries to call a method of the same name as the grammar rule,
-giving it the newly create L<Match|/type/Match> object as a positional
+giving it the newly created L<Match|/type/Match> object as a positional
 argument. If no such method exists, it is skipped.
 
 Here is a contrived example of a grammar and actions in action:
