--- a/perl6/doc/doc/Language/operators.pod
+++ b/perl6/doc/doc/Language/operators.pod
@@ -703,8 +703,28 @@ except that C<temp> does not reset the value).
 
     sub prefix:<let>(Mu $a is rw)
 
-Hypothetical reset: if the current scope is exited either through an exception
-or C<fail()>, the old value is restored.
+Restores the previous value if the block exits unsuccessfully. A
+successful exit means the block returned a defined value or a list.
+
+    my $answer = 42;
+
+    {
+        let $answer = 84;
+        die if not Bool.pick;
+        CATCH {
+            default { say "it's been reset :(" }
+        }
+        say "we made it 84 sticks!";
+    }
+
+    say $answer;
+
+In the above case, if the C<Bool.pick> returns true, the answer will
+stay as 84 because the block returns a defined value (C<say> returns
+true). Otherwise the C<die> statement will cause the block to exit
+unsuccessfully, resetting the answer to 42.
+
+=comment this is duplicated in variables.pod
 
 =head1 Nonchaining Binary Precedence
 
