--- a/perl6/doc/doc/Type/Block.pod
+++ b/perl6/doc/doc/Type/Block.pod
@@ -7,7 +7,7 @@
     class Block is Code { }
 
 A C<Block> is a code object meant for small-scale code reuse. A block is
-created syntactically by a list of statements enclosed in curly brackets.
+created syntactically by a list of statements enclosed in curly braces.
 
 Without an explicit signature or placeholder arguments, a block has C<$_>
 as a positional argument
