--- a/perl6/doc/doc/Type/Mu.pod
+++ b/perl6/doc/doc/Type/Mu.pod
@@ -68,8 +68,8 @@ fast recognition by humans.
 
 The default C<gist> method in C<Mu> re-dispatches to the L<perl> method for
 defined invocants, and returns the type name in parenthesis for type object
-invocants.
-Many built-in classes override the case of instances to something more specific.
+invocants. Many built-in classes override the case of instances to something 
+more specific that may truncate output.
 
 C<gist> is the method that L<say> calls implicitly, so C<say $something> and
 C<say $something.gist> generally produce the same output.
@@ -164,16 +164,25 @@ initializing any attributes.
 Prints value to C<$*OUT> after stringification using C<.Str> method without
 adding a newline at end.
 
-    "abc\n".print;          # abc
+    "abc\n".print;          # abc␤
+
+=head2 method put
+
+    multi method put() returns Bool:D
+
+Prints value to C<$*OUT> after stringification using C<.Str> method adding a
+newline at end.
+
+    "abc".put;              # abc␤
 
 =head2 method say
 
     multi method say() returns Bool:D
 
 Prints value to C<$*OUT> after stringification using C<.gist> method with
-newline at end.
+newline at end. To produce machine readable output use C<.put>.
 
-    say 42;                 # 42
+    say 42;                 # 42␤
 
 =head2 method ACCEPTS
 
