--- a/perl6/doc/doc/Type/Promise.pod
+++ b/perl6/doc/doc/Type/Promise.pod
@@ -80,7 +80,9 @@ Creates a new Promise that will be kept in C<$seconds> seconds, or later.
 
 Returns a new promise that will be kept when all the promises passed as
 arguments are kept, and that will be broken as soon as any of the argument
-promises is broken.
+promises is broken. You may need to run the following code several times
+before none of the promises get broken with C<die> and we get to
+the C<say> on the last line, instead of bailing out on C<await>.
 
     my @promises;
     for 1..5 -> $t {
@@ -91,6 +93,7 @@ promises is broken.
     }
     my $all-successful = Promise.allof(@promises);
     await $all-successful;
+    say "Promises kept so we get to live another day!";
 
 =head2 method anyof
 
@@ -216,7 +219,8 @@ exception of type C<X::Promise::Vowed>.
     multi sub await(Promise:D)
     multi sub await(*@)
 
-Waits until one or more promises are all fulfilled, and then returns their
-values. Also works on L<channels|/type/Channel>.
+Waits until one or more promises are I<all> fulfilled, and then returns their
+values. Also works on L<channels|/type/Channel>. Any broken promises will
+rethrow their exceptions. 
 
 =end pod
