--- a/perl6/doc/doc/Type/X/AdHoc.pod
+++ b/perl6/doc/doc/Type/X/AdHoc.pod
@@ -23,6 +23,12 @@ You can obtain the original object with the C<payload> method.
         " and backtrace ",
         $!.backtrace;
 
+Note that young code will often be prototyped using C<X::AdHoc> and
+then later be revised to use more specific subtypes of C<Exception>.
+As such it is usually best not to explicitly rely on receiving an
+C<X::AdHoc> -- in many cases using the string returned by the
+C<.message> method, which all C<Exception>s must have, is preferable.
+
 =head1 Methods
 
 =head2 method payload
